<resources>
    <string name="app_name">DiSample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="login_here">Login Here</string>
    <string name="login_now">Login now</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="something_went_wrong_n_press_to_retry">Something went wrong! \n Press to retry</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="created_by">Created By:</string>
    <string name="image_size">Image Size:</string>
    <string name="image_type">Image Type</string>
    <string name="image_tags">Image Tags</string>
    <string name="username">Username</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="favourites">Favourites</string>
    <string name="downloads">Downloads</string>
    <string name="pick_your_age">Pick your age</string>
</resources>